# simplicial-topology

./: .gitignore  Cargo.toml  README.md
benches/: betti_benchmark.rs  random_complex_benchmark.rs  simplicial_complex_benchmark.rs
src/: lib.rs  macros.rs  main.rs
src/graphics/: mod.rs  plot.rs
src/linear_algebra/: smith_normal_form.rs
src/simplicial_complex/: hypergraph.rs  mod.rs  random_simplicial_complex.rs  simplex.rs  simplicial_complex.rs
src/tests/: betti_number_test.rs  mod.rs  simplicial_complex_test.rs
src/utils/: geometry.rs  linear_algebra.rs  mod.rs  utils.rs
