[package]
name = "simplicial_topology"
version = "0.1.0"
edition = "2021"
authors = ["Lewis Mead"]
readme = "README.md"
keywords = ["simplicial", "topology", "betti", "combinatorics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"
itertools = "0.10.5"
rand = "0.8.5"
num-integer = "0.1.45"
rayon = "1.7.0"
criterion = {version = "0.4.0", features = ["html_reports"]}
plotly = {version = "0.8.3", optional = true}

[features]
sc_plot = ["dep:plotly"]

[[bench]]
name="simplicial_complex_benchmark"
harness=false

[[bench]]
name="random_complex_benchmark"
harness=false
